metadata/force-app/main/default/objects/CustomName_JaJqq__c/CustomName_JaJqq__c.object-meta.xml
<CustomObject>
    <description>Description_wlOpd</description>
    <label>CustomLabel_jeYxh</label>
    <nameField>
        <label>CustomLabel_jeYxh</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_jeYxhs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>