metadata/force-app/main/default/objects/CustomName_JaJqq__c/fields/CustomField_nftOw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nftOw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLSFgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>