metadata/force-app/main/default/objects/CustomName_JaJqq__c/fields/CustomField_rhSnH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rhSnH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldypwOW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>